reset css, add logo

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ALPN</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+    <img src="assets/logo.svg" alt="logo">
     <nav>
       <ul>
-        <li>START</li>
-        <li>O LIDZE</li>
-        <li>ZAPISY</li>
-        <li>KONTAKT</li>
+        <li> START </li>
+        <li> O LIDZE </li>
+        <li> ZAPISY </li>
+        <li> KONTAKT </li>
       </ul>
     </nav>
   </header>
@@ -31,7 +33,7 @@
       <span>icon</span><span> 000 000 000 </span>
     </div>
     <div>
-      <span>icon</span><span>@example</span>
+      <span>icon </span><span>@example</span>
     </div>
     <form action="">
       <input type="submit" value="WYŚLIJ WIADOMOŚĆ">
