add jpg's, update header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md d-flex align-items-center justify-content-around text-center">
-        <a class="navbar-brand" href="#"><img src="assets/logo.svg" alt="page logo"></a>
+      <nav class="navbar navbar-expand-md  align-items-center justify-content-around text-center">
+        <a class="navbar-brand" href="#"><img src="/assets/logo.svg" alt="page logo"></a>
         <h4 class="nav-link" href="#">EKSTRALIGA </h4>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,12 +27,15 @@
           </div>
         </div>
       </nav>
-      <p class="">amatorska liga piłki nożnej</p>
-      <p class="">Runda wiosenna</p>
-      <p class="">zagraj!</p>
-      <p class="">Rozgrywki dla grup znajomych,<br>
-        firm oraz instytucji</p>
-      <input  type="submit" value="ZAPISZ SIĘ"></input>
+      <div class="header-txt-wrap">
+        <p class="">amatorska liga piłki nożnej</p>
+        <p class="">Runda wiosenna</p>
+        <p class="">zagraj!</p>
+        <p class="">Rozgrywki dla grup znajomych,<br>
+          firm oraz instytucji</p>
+        <input class="btn btn-green"  type="submit" value="ZAPISZ SIĘ"></input>
+      </div>
+      
       <div class="mobile-bg2"></div>
     </header>
 
@@ -42,17 +45,17 @@
     </section>
     <section class="signup">
       <form action="">
-        <input type="submit" value="WYŚLIJ ZGŁOSZENIE">
+        <input class="btn btn-green" type="submit" value="WYŚLIJ ZGŁOSZENIE">
       </form>
     </section>
     <section class="contact-form">
       <H3> Masz pytania skontaktuj się z nami</H3>
       <div class="py-3">
-        <span><img src="/assets/tel.svg" alt="telephone icon"></span><span> 000 000 000 </span>
-        <span><img src="/assets/email.svg" alt="email icon"> </span><span>ex@example.com</span>
+        <span><img src="assets/tel.svg" alt="telephone icon"></span><span> 000 000 000 </span>
+        <span><img src="assets/email.svg" alt="email icon"> </span><span>ex@example.com</span>
       </div>
       <form action="">
-        <input class="btn btn-success" type="submit" value="WYŚLIJ WIADOMOŚĆ">
+        <input class="btn btn-green" type="submit" value="WYŚLIJ WIADOMOŚĆ">
       </form>
     </section>
     <footer></footer>
