--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-md  align-items-center justify-content-around text-center">
-        <a class="navbar-brand" href="#"><img src="/assets/logo.svg" alt="page logo"></a>
+        <a class="navbar-brand" href="#"><img src="assets/logo.svg" alt="page logo"></a>
         <h4 class="nav-link" href="#">EKSTRALIGA </h4>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
