update header styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md  align-items-center justify-content-around text-center">
+      <nav class="navbar navbar-expand-md navbar-light align-items-center justify-content-around text-center">
         <a class="navbar-brand" href="#"><img src="assets/logo.svg" alt="page logo"></a>
         <h4 class="nav-link" href="#">EKSTRALIGA </h4>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,8 +36,9 @@
         <input class="btn btn-green"  type="submit" value="ZAPISZ SIĘ"></input>
       </div>
       
-      <div class="mobile-bg2"></div>
+      
     </header>
+    <div class="mobile-bg2"></div>
 
     <section class="informations">
 
