work in progress...

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-md navbar-light align-items-center justify-content-around text-center">
         <a class="navbar-brand" href="#"><img src="assets/logo.svg" alt="page logo"></a>
-        <h4 class="nav-link" href="#">EKSTRALIGA </h4>
+        <h2 class="nav-link" href="#">EKSTRALIGA </h2>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,19 +46,21 @@
 
     <section class="informations">
       <h5>O LIDZE</h5>
-      <P>Futbolowa Liga Szóstek to w pełni profesjonalnie zorganizowane, amatorskie rozgrywki piłkarskie dla: firm, instytucji, grup znajomych oraz studentów. 
-        Dzięki wyjątkowej otoczce towarzyszącej rywalizacji, ożywiamy piłkarskie marzenia. Z obsługa sędzowską, dogodny terminarz, mecze raz w tygodniu, wyór piłkarzy kolejki/miesiąca, najładniejszej bramki. Dołącz do nas!</P>
-      <div>
-        <p>Gramy</p>
-        <p><span class="big-txt">6 </span> NA <span> 6</span></p>
-      </div>
-      <div>
-        <p>CZAS GRY</p>
-        <p><span class="big-txt">2 </span> X <span> 25 </span> min</p>
-      </div>
-      <div>
-        <p>Rundy</p>
-        <p><span class="big-txt">2 </span> NA SEZON</p>
+      <p>Futbolowa Liga Szóstek to w pełni profesjonalnie zorganizowane, amatorskie rozgrywki piłkarskie dla: firm, instytucji, grup znajomych oraz studentów. 
+        Dzięki wyjątkowej otoczce towarzyszącej rywalizacji, ożywiamy piłkarskie marzenia. Z obsługa sędzowską, dogodny terminarz, mecze raz w tygodniu, wyór piłkarzy kolejki/miesiąca, najładniejszej bramki. Dołącz do nas!</p>
+      <div class="">    
+        <div>
+          <p class="txt-prime">Gramy</p>
+          <p><span class="big-txt">6 </span>NA <span class="big-txt">6</span></p>
+        </div>
+        <div>
+          <p>CZAS GRY</p>
+          <p><span class="big-txt">2 </span>X <span class="big-txt">25 </span> min</p>
+        </div>
+        <div>
+          <p>Rundy</p>
+          <p><span class="big-txt">2 </span> NA SEZON</p>
+        </div>
       </div>
       <img class="centered-img" src="assets/boisko-infografika 1.jpg" alt="soccer field">
 
@@ -73,10 +75,10 @@
       <div>
         <p>boisko orlik</p>
         <p>Łagów <span>ul. zapłotnia 1 </span></p>
-        <div class="border green"></div>
+        <div class="border-green"></div>
         <div class="img-green-wrap"></div>
         <div class="img-dark-wrap"></div>
-        <div class="border dark"></div>
+        <div class="border-dark"></div>
         <a href="#">zobacz jak dojechać</a>
       </div>
     </section>
